<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="bottom"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:gravity="end"
                android:text="@string/display"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_CLEAR" />

            <Button
                android:id="@+id/buttonLeftBrace"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_LEFT_BRACE" />

            <Button
                android:id="@+id/buttonRightBrace"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_RIGHT_BRACE" />

            <Button
                android:id="@+id/buttonDiv"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_DIV" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_7" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_8" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_9" />

            <Button
                android:id="@+id/buttonMul"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_MUL" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_4" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_5" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_6" />

            <Button
                android:id="@+id/buttonSub"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_MINUS" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_3" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_ADD" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_0" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_DOT" />

            <Button
                android:id="@+id/buttonCalc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BUTTON_CALC" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>